--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-tag-cloud": "^1.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "cross-env HTTPS=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
