--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "homepage": "http://harshpahariya.github.io/portfolio/",
+  "homepage": "https://aagraw2.github.io/portfolio",
   "name": "myapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
     "antd": "^4.15.6",
     "gh-pages": "^3.1.0",
     "randomcolor": "^0.5.4",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.3.0",
     "react-tag-cloud": "^1.3.2"
